--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,12 @@
 		"scripts": ["background.js"],
 		"persistent": false
 	},
+	"page_action": {
+		"default_popup": "popup.html",
+		"default_icon":{
+			"32": "assets/img/32icon.png"
+		}
+	},
+	
 	"manifest_version": 2
 }
