--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,12 @@
 		"scripts": ["background.js"],
 		"persistent": false
 	},
+	"content_scripts": [
+		{
+			"matches": ["http://*/*", "https://*/*"],
+			"js": ["urlmagic.js"],
+			"run_at": "document_start"
+		}
+	],
 	"manifest_version": 2
 }
