--- a/manifest.json
+++ b/manifest.json
@@ -4,15 +4,15 @@
 	"description": "Be more productive!",
 	"permissions": ["storage", "tabs", "webNavigation", "storage", "http://*/", "https://*/"],
 	"background": {
-		"scripts": ["background.js", "assets/scripts/main.js"],
+		"scripts": ["background.js"],
 		"persistent": false
 	},
 	"browser_action": {
 		"default_popup": "popup.html",
-		"default_icon":{
+		"default_icon": {
 			"32": "assets/img/32icon.png"
 		}
 	},
-	
+
 	"manifest_version": 2
 }
