--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "Finish.it",
 	"version": "0.0001",
 	"description": "Be more productive!",
-	"permissions": ["storage", "tabs", "webNavigation", "storage", "http://*/", "https://*/"],
+	"permissions": ["storage", "tabs", "webNavigation", "storage"],
 	"background": {
 		"scripts": ["background.js"],
 		"persistent": false
